--- a/placement_management_system/acc_set.html
+++ b/placement_management_system/acc_set.html
@@ -55,7 +55,7 @@
 <br>
 <center>
     <div class="btns">
-    <a href="update_profile.html" class="page"><button>EDIT PROFILE</button></a>
+    <a href="update_profile.php" class="page"><button>EDIT PROFILE</button></a>
     <a href="forgot_password.php"class="page"><button>CHANGE PASSWORD</button></a>
     <a href="delete_account.html"class="page"><button>DELETE ACCOUNT</button></a>
 
