--- a/placement_management_system/delete_account.html
+++ b/placement_management_system/delete_account.html
@@ -60,10 +60,14 @@
 <label>Email</label>
     <input type="email" placeholder="Enter your Email"  id="email" class="form_elements" name="email" ><br>
 
-<hr>
-
-
+<span style="color: red;">
+    <p style="text-align: left;">Note: Once your account is deleted, it cannot be retained</p>
+  </span> 
+  
+  <hr>
     <button type="submit" value="submit" name="delete">DELETE</button>
+  
+     
 </form>
 
 
