--- a/placement_management_system/acc_set.html
+++ b/placement_management_system/acc_set.html
@@ -37,7 +37,7 @@
         <nav class="topnav" id="myTopnav">          
           <div class="menu">        
           <a href="feedback.html">Feedback</a>     
-          <a href="update_profile.html">Account Settings</a>
+          <a href="acc_set.html">Account Settings</a>
           
           
         </div>
