--- a/placement_management_system/home.html
+++ b/placement_management_system/home.html
@@ -95,7 +95,7 @@
 </div>
 </div>
 
-<h2><b>DOMAINS WWE OFFER</b></h2>
+<h2><b>DOMAINS WE OFFER</b></h2>
 <div class="achieve">
 <div class="row row-cols-1 row-cols-md-3 g-1">
   <div class="col">
