--- a/placement_management_system/admin.html
+++ b/placement_management_system/admin.html
@@ -45,8 +45,8 @@
   <h1>HELLO ADMIN</h1>
   <div class="btns">
   <a href="view_users.php" class="page"><button>VIEW USERS</button></a>
-  <a href="add_company.html"class="page"><button>ADD COMPANY</button></a>
-  <a href="view_company.php"class="page"><button>VIEW COMPANY</button></a>
+  <a href="add_company.html"class="page"><button>ADD JOBS</button></a>
+  <a href="view_company.php"class="page"><button>VIEW JOBS</button></a>
   <a href="view_feedback.php"class="page"><button>VIEW FEEDBACK</button></a>
 </div>
 </center>
