--- a/placement_management_system/add_company.html
+++ b/placement_management_system/add_company.html
@@ -105,7 +105,7 @@
           id="link" name="link" class="form_elements">
         
      <br><br>
-          <button type="submit">ADD COMPANY</button><br>
+          <button type="submit">ADD JOB</button><br>
         
         </div> 
    
@@ -115,7 +115,7 @@
         <a href="admin.html">
             <button style="width: 500px; border-radius: 5px;">BACK</button></a>
         <a href="view_company.php">
-            <button style="width: 500px;border-radius: 5px;">VIEW COMPANY</button></a>
+            <button style="width: 500px;border-radius: 5px;">VIEW JOB</button></a>
     </div>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
