--- a/placement_management_system/add_company.html
+++ b/placement_management_system/add_company.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Company</title>
+    <title>Add Job</title>
     <link rel="stylesheet" href="css/add_company.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -55,7 +55,7 @@
 
 </div>
     <center>
-        <h2>ADD COMPANY</h2> 
+        <h2>ADD JOB</h2> 
     </center>
 
     <br>
